# ML-based-snapshots

cpp/: CMakeLists.txt  demo_main.cpp  snapshot_predictor.cpp  snapshot_predictor.hpp  test_python_embed.cpp
data/: generator.cpp
ml/: dataset.pkl  hist_model.pkl  predict_hist.py  prepare_dataset.py  requirements.txt  train_hist_model.py
